[gd_scene load_steps=2 format=2]

[ext_resource path="res://ColorPaletteExtractor.gd" type="Script" id=2]

[node name="ManualExtraction" type="Node"]
script = ExtResource( 2 )
extract_button_path = NodePath("ManualExtraction/VBoxContainer/Extract")

[node name="ManualExtraction" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.5
margin_top = -50.0
margin_right = 102.5
margin_bottom = 78.0

[node name="VBoxContainer" type="VBoxContainer" parent="ManualExtraction"]
margin_right = 178.0
margin_bottom = 146.0

[node name="Label2" type="Label" parent="ManualExtraction/VBoxContainer"]
margin_right = 178.0
margin_bottom = 14.0
text = "Color Space Extraction"

[node name="HBoxContainer4" type="HBoxContainer" parent="ManualExtraction/VBoxContainer"]
margin_top = 18.0
margin_right = 178.0
margin_bottom = 42.0

[node name="Label" type="Label" parent="ManualExtraction/VBoxContainer/HBoxContainer4"]
margin_top = 5.0
margin_right = 116.0
margin_bottom = 19.0
text = "Color Space Name"

[node name="ColorSpaceName" type="LineEdit" parent="ManualExtraction/VBoxContainer/HBoxContainer4"]
margin_left = 120.0
margin_right = 178.0
margin_bottom = 24.0
caret_blink = true
caret_blink_speed = 0.5

[node name="HBoxContainer" type="HBoxContainer" parent="ManualExtraction/VBoxContainer"]
margin_top = 46.0
margin_right = 178.0
margin_bottom = 66.0

[node name="Label" type="Label" parent="ManualExtraction/VBoxContainer/HBoxContainer"]
margin_top = 3.0
margin_right = 63.0
margin_bottom = 17.0
text = "Algorithm"

[node name="OptionButton" type="OptionButton" parent="ManualExtraction/VBoxContainer/HBoxContainer"]
margin_left = 67.0
margin_right = 96.0
margin_bottom = 20.0

[node name="HBoxContainer3" type="HBoxContainer" parent="ManualExtraction/VBoxContainer"]
margin_top = 70.0
margin_right = 178.0
margin_bottom = 94.0

[node name="Label" type="Label" parent="ManualExtraction/VBoxContainer/HBoxContainer3"]
margin_top = 5.0
margin_right = 78.0
margin_bottom = 19.0
text = "Input Folder"

[node name="InputFolder" type="LineEdit" parent="ManualExtraction/VBoxContainer/HBoxContainer3"]
margin_left = 82.0
margin_right = 140.0
margin_bottom = 24.0
caret_blink = true
caret_blink_speed = 0.5

[node name="HBoxContainer2" type="HBoxContainer" parent="ManualExtraction/VBoxContainer"]
margin_top = 98.0
margin_right = 178.0
margin_bottom = 122.0

[node name="Label" type="Label" parent="ManualExtraction/VBoxContainer/HBoxContainer2"]
margin_top = 5.0
margin_right = 89.0
margin_bottom = 19.0
text = "Output Folder"

[node name="OutputFolder" type="LineEdit" parent="ManualExtraction/VBoxContainer/HBoxContainer2"]
margin_left = 93.0
margin_right = 151.0
margin_bottom = 24.0
caret_blink = true
caret_blink_speed = 0.5

[node name="Extract" type="Button" parent="ManualExtraction/VBoxContainer"]
margin_top = 126.0
margin_right = 178.0
margin_bottom = 146.0
text = "Extract"

[connection signal="text_changed" from="ManualExtraction/VBoxContainer/HBoxContainer4/ColorSpaceName" to="." method="_on_ColorSpaceName_text_changed"]
[connection signal="text_changed" from="ManualExtraction/VBoxContainer/HBoxContainer3/InputFolder" to="." method="_on_InputFolder_text_changed"]
[connection signal="text_changed" from="ManualExtraction/VBoxContainer/HBoxContainer2/OutputFolder" to="." method="_on_OutputFolder_text_changed"]
[connection signal="button_up" from="ManualExtraction/VBoxContainer/Extract" to="." method="_on_Extract_button_up"]
